--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-	"name": "ngSweetAlertAsPromised",
-	"version": "1.3.1",
-	"main": "./SweetAlert.js",
+	"name": "ng-sweet-alert",
+	"version": "1.1.3",
+	"main": "ng-sweet-alert.js",
 	"authors": [
-		"jutaz@jutaz.lt"
+		"Luciano Graziani <lgraziani2712@gmail.com> (http://code-n-mocha.tumblr.com)"
 	],
 	"description": "Promised AngularJS wrapper for SweetAlert",
 	"keywords": [
@@ -11,7 +11,7 @@
 		"AngularJs",
 		"sweetalert",
 		"sweet",
-		"alert"
+		"alert",
 	],
 	"license": "MIT",
 	"ignore": [
@@ -22,10 +22,13 @@
 		"tests",
 		"CHANGELOG.md"
 	],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:LucianoGraziani/ngSweetAlert.git"
+  },
 	"dependencies": {
-		"angular":"~1.3.0",
-		"sweetalert":"~1.0.0"
+		"angular": "^1.5.3",
+		"sweetalert": "^1.1.3"
 	},
-	"devDependencies": {
-	}
+	"devDependencies": {}
 }
