--- a/bower.json
+++ b/bower.json
@@ -1,34 +1,34 @@
 {
-	"name": "ng-sweet-alert",
-	"version": "1.1.3",
-	"main": "ng-sweet-alert.js",
-	"authors": [
-		"Luciano Graziani <lgraziani2712@gmail.com> (http://code-n-mocha.tumblr.com)"
-	],
-	"description": "Promised AngularJS wrapper for SweetAlert",
-	"keywords": [
-		"angular",
-		"AngularJs",
-		"sweetalert",
-		"sweet",
-		"alert",
-	],
-	"license": "MIT",
-	"ignore": [
-		"**/.*",
-		"node_modules",
-		"bower_components",
-		"test",
-		"tests",
-		"CHANGELOG.md"
-	],
+  "name": "ng-sweet-alert",
+  "version": "1.1.3",
+  "main": "ng-sweet-alert.min.js",
+  "authors": [
+    "Luciano Graziani <lgraziani2712@gmail.com> (http://code-n-mocha.tumblr.com)"
+  ],
+  "description": "Promised AngularJS wrapper for SweetAlert",
+  "keywords": [
+    "angular",
+    "AngularJs",
+    "sweetalert",
+    "sweet",
+    "alert",
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests",
+    "CHANGELOG.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:LucianoGraziani/ngSweetAlert.git"
   },
-	"dependencies": {
-		"angular": "^1.5.3",
-		"sweetalert": "^1.1.3"
-	},
-	"devDependencies": {}
+  "dependencies": {
+    "angular": "^1.5.3",
+    "sweetalert": "^1.1.3"
+  },
+  "devDependencies": {}
 }
