--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-sweet-alert",
+  "name": "ng-sweet-alert-promised",
   "version": "1.1.3",
   "main": "ng-sweet-alert.min.js",
   "authors": [
