--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-sweet-alert-promised",
   "version": "1.1.3",
-  "main": "dist/ng-sweet-alert.min.js",
+  "main": "ng-sweet-alert.js",
   "authors": [
     "Luciano Graziani <lgraziani2712@gmail.com> (http://code-n-mocha.tumblr.com)"
   ],
